--- a/pom.xml
+++ b/pom.xml
@@ -28,15 +28,17 @@
 			<artifactId>spring-web</artifactId>
 			<version>5.3.14</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		<!--Math-->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
 		</dependency>
-
+		<!--CPU info-->
+		<dependency>
+			<groupId>com.github.oshi</groupId>
+			<artifactId>oshi-core</artifactId>
+			<version>5.3.4</version>
+		</dependency>
 	</dependencies>
 </project>
